--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,7 +22,7 @@ MAX_FILE_SIZE_MB=10
 ALLOWED_IMAGE_MIME=image/jpeg,image/png,image/webp
 
 # CORS
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 
 # Logging
 LOG_LEVEL=info
