--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.8.2",
+    "yamljs": "^0.3.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
